--- a/app/client/stylesheets/main.css
+++ b/app/client/stylesheets/main.css
@@ -35,7 +35,11 @@ bottom:0px;
   height:100%;
 }
 body .content {
-  min-height:100%
+  min-height:auto;
+  height: 100%;
+  width: 100%;
+  padding-bottom:0px;
+  padding-top:0px;
 }
 .skin-blue .content-wrapper {
   bottom: 50px;
