--- a/app/client/templates/page/view.html
+++ b/app/client/templates/page/view.html
@@ -1,5 +1,5 @@
 <template name="ViewPage">
-  <h1 id="page_title" style="margin-top:-15px;" class="ui header page-header">
+  <h1 id="page_title" class="ui header page-header">
     {{page.title}}
   </h1>
   {{#each widgets}}
