--- a/app/client/templates/layouts/master_layout/master_layout.html
+++ b/app/client/templates/layouts/master_layout/master_layout.html
@@ -117,9 +117,9 @@
 {{> yield}}
 {{/contents}}
 
-<footer class="main-footer">
+<!--footer class="main-footer">
   <strong>Copyright &copy; 2015 <a href="#">Coastal Accounting</a>.</strong> All rights reserved.
-</footer>
+</footer-->
 <!-- Main Footer -->
 {{/AdminLTE}}
 </div>
