--- a/app/client/templates/widget/edit/edit.html
+++ b/app/client/templates/widget/edit/edit.html
@@ -1,39 +1,70 @@
 <template name="EditWidget">
   <section class="content-header">
-  <h1 id="page_title" class="ui header page-header">
-    Edit Widget
-    {{#if (can "remove" widget)}}
+    <h1 id="page_title" class="ui header page-header">
+      Edit Widget
+      {{#if (can "remove" widget)}}
       {{> quickRemoveButton collection="Widgets" _id=widget._id beforeRemove=beforeRemove class="btn btn-danger"}}
-    {{/if}}
-  </h1>
-  {{> breadcrumb}}
-  </section>
-  <div class="nooverflow" >
-
-  <div class="split-left" >
-    <div class="left-container" >
-      <div class="left-wrapper">
-      {{#if (can "update" widget)}}
-        {{> quickForm collection="Widgets" doc=widget schema=schema id="editWidgetForm" type="update" omitFields="createdBy" buttonContent="Update"}}
       {{/if}}
-      </div>
-    </div>
-  </div>
+    </h1>
+    {{> breadcrumb}}
+  </section>
+  <div class="contain">
+    <div class="nooverflow" >
 
-    <!-- Sidebar -->
-    <div id="split-right" class="split-right collapse" >
-      <div class="right-container">
-        <div class="right-wrapper">
-          <div class="right-header">
-            <h1>Preview
-            </h1>
+      <div class="split-left" >
+        <div class="left-container" >
+          <div class="left-wrapper">
+            {{#if destroyForm}}
+            {{! this is a wonky workaround for the fact that autoform doesn't handle reactively changing schema attribute, which should be fixed eventually}}
+            {{else}}
+            {{#if (can "update" widget)}}
+            {{> quickForm collection="Widgets" doc=widget schema=schema id="editWidgetForm" type="update" omitFields="createdBy" buttonContent="Update"}}
+            {{#if isForm widget}}
+            {{#linkTo route="insertField" parent=widget._id}}<i class="fa fa-plus"></i> New Field{{/linkTo}}
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th>Type</th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody>
+                {{#each fields}}
+                <tr>
+                  <td>{{type}}</td>
+                  <td>
+                    {{#linkTo route='editField'}}
+                    <i class="fa fa-pencil-square-o"></i>
+                    {{/linkTo}}
+                  </td>
+                </tr>
+                {{/each}}
+              </tbody>
+            </table>
+            {{/if}}
+            {{/if}}
+            {{/if}}
           </div>
-          <div class="right-content">
-          {{> Template.dynamic template=widget.type data=widget}}
         </div>
       </div>
+
+      <!-- Sidebar -->
+      <div id="split-right" class="split-right collapse" >
+        <div class="right-container">
+          <div class="right-wrapper">
+            <div class="right-header">
+              <h1>Preview
+              </h1>
+            </div>
+            <div class="right-content">
+              {{#if isWidget widget}}
+              {{> Template.dynamic template=widget.type data=widget}}
+              {{/if}}
+            </div>
+          </div>
+        </div>
+      </div>
+      <button class="fab" data-toggle="collapse" data-target="#split-right"><i class="fa fa-search"></i></button>
     </div>
-    </div>
-    <button class="fab" data-toggle="collapse" data-target="#split-right"><i class="fa fa-search"></i></button>
   </div>
 </template>
