--- a/app/client/templates/field/edit/edit.html
+++ b/app/client/templates/field/edit/edit.html
@@ -22,7 +22,7 @@
   </div>
 
     <!-- Sidebar -->
-    <div id="split-right" class="split-right collapse" >
+    <!--div id="split-right" class="split-right collapse" >
       <div class="right-container">
         <div class="right-wrapper">
           <div class="right-header">
@@ -35,7 +35,7 @@
       </div>
     </div>
     </div>
-    <button class="fab" data-toggle="collapse" data-target="#split-right"><i class="fa fa-search"></i></button>
+    <button class="fab" data-toggle="collapse" data-target="#split-right"><i class="fa fa-search"></i></button-->
   </div>
   </div>
 </template>
