--- a/app/client/stylesheets/main.css
+++ b/app/client/stylesheets/main.css
@@ -38,7 +38,7 @@ body .content {
   position: absolute;
   top: 0px;
   bottom: 0px;
-  overflow-y: scroll;
+  overflow-y: auto;
   left: 0px;
   right: 0px;
   padding-bottom:0px;
