--- a/app/client/templates/layouts/master_layout/master_layout.html
+++ b/app/client/templates/layouts/master_layout/master_layout.html
@@ -29,14 +29,7 @@
             <!-- User Account Menu -->
             {{> loginButtons}}
             {{else}}
-            <li>
-              <a href="#" onclick="Meteor.loginWithGoogle({requestPermissions:[
-              'https://www.googleapis.com/auth/userinfo.email',
-              'https://www.googleapis.com/auth/drive',
-              'https://www.googleapis.com/auth/calendar',
-              'https://www.googleapis.com/auth/userinfo.profile',
-              'https://www.googleapis.com/auth/tasks'],  requestOfflineToken: true})"><i class="fa fa-plus"></i>Sign in</a><!--forceApprovalPrompt: true-->
-            </li>
+            {{> loginButtons}}
             {{/if}}
             <!--li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
