--- a/app/client/templates/layouts/master_layout/menus.html
+++ b/app/client/templates/layouts/master_layout/menus.html
@@ -8,6 +8,7 @@
         <li>{{#linkTo route="menusList"}}Menus{{/linkTo}}</li>
         <li>{{#linkTo route="usersList"}}Users{{/linkTo}}</li>
         <li>{{#linkTo route="typesList"}}Types{{/linkTo}}</li>
+        <li>{{#linkTo route="rolesList"}}Roles{{/linkTo}}</li>
     </ul>
   </li>
   {{/if}}
