--- a/app/client/templates/widget/edit/edit.html
+++ b/app/client/templates/widget/edit/edit.html
@@ -2,7 +2,7 @@
   {{#if isWidget widget}}
   <button class="fab" data-toggle="collapse" data-target="#split-right"><i class="fa fa-search"></i></button>
   <div class="fill">
-    <div class="contain" style="overflow-y:auto;">
+    <div class="contain" style="overflow-y:auto;padding:10px">
       <section class="content-header">
         <h1 id="page_title" class="ui header page-header">
           Edit Widget
