--- a/app/client/templates/layouts/master_layout/menus.html
+++ b/app/client/templates/layouts/master_layout/menus.html
@@ -9,6 +9,7 @@
         <li>{{#linkTo route="usersList"}}Users{{/linkTo}}</li>
         <li>{{#linkTo route="typesList"}}Types{{/linkTo}}</li>
         <li>{{#linkTo route="rolesList"}}Roles{{/linkTo}}</li>
+        <li>{{#linkTo route="rolesList"}}Forms{{/linkTo}}</li>
     </ul>
   </li>
   {{/if}}
