form selection from list

--- a/app/client/templates/form/submissions/list.html
+++ b/app/client/templates/form/submissions/list.html
@@ -1,7 +1,7 @@
 <template name="submissions">
   <section class="content-header">
     <h1 id="page_title" class="ui header page-header">
-      Edit Field
+      Submissions
       {{#if (can "remove" field)}}
       {{> quickRemoveButton collection="Fields" _id=field._id beforeRemove=beforeRemove class="btn btn-danger"}}
       {{/if}}
