form selection from list

--- a/app/client/templates/form/edit.html
+++ b/app/client/templates/form/edit.html
@@ -15,7 +15,7 @@
   <h4>Fields</h4>
   {{#linkTo route="insertField" parent=form._id}}<i class="fa fa-plus"></i> New field{{/linkTo}}
 
-  <table class="table table-hover">
+  <table id="items" class="table table-hover">
     <thead>
       <tr>
         <th>type</th>
