messaging fix, schema hidden field fix

--- a/app/client/stylesheets/main.css
+++ b/app/client/stylesheets/main.css
@@ -1,6 +1,9 @@
 /*****************************************************************************/
 /* main: Style */
 /*****************************************************************************/
+#navbarMessagesMenu li a p {
+    white-space: normal;
+}
 .main {
 }
 body,html {
