fix html display in announcement

--- a/app/client/templates/layouts/master_layout/navbar/messages/navbar-messages.html
+++ b/app/client/templates/layouts/master_layout/navbar/messages/navbar-messages.html
@@ -38,7 +38,7 @@
     <!-- Message title and timestamp -->
     <h4>
       {{subject}}
-      <small><i class="fa fa-clock-o"></i>{{fromNow createdAt}}</small>
+      <small style="position: relative;margin-left: 128px;"><i class="fa fa-clock-o"></i>{{fromNow createdAt}}</small>
     </h4>
     <!-- The message -->
     <p>{{body}}</p>
