fix for message display

--- a/app/client/stylesheets/main/main.css
+++ b/app/client/stylesheets/main/main.css
@@ -34,13 +34,14 @@ body,html {
   display: inline-block;
   padding: 0px 0px 0px 0px;
 
-  -moz-box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.47);
-	-webkit-box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.47);
-	box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.47);
+  -moz-box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.35);
+	-webkit-box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.35);
+	box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.35);
 	/* For IE 8 */
 	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=1, Direction=135, Color='#000000')";
 	/* For IE 5.5 - 7 */
 	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#000000');
+
 }
 
 .announcement h3 {
@@ -51,6 +52,7 @@ body,html {
   width: 100px;
   background: lightblue;
   padding:10px;
+  border: rgba(0,0,1,0.2) solid 2px;
 }
 
 .announcement div {
