--- a/app/client/stylesheets/main/main.css
+++ b/app/client/stylesheets/main/main.css
@@ -50,9 +50,24 @@ body,html {
 	box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);
   margin: 0px;
   width: 100px;
-  background: lightblue;
+  background: #ABC4D6;
+  color:white;
   padding:10px;
   border: rgba(0,0,1,0.2) solid 2px;
+}
+
+#page_title {
+  -moz-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 0px;
+  padding:10px;
+  background: #ABC4D6;
+  color: white;
+  border-bottom: rgba(0,0,1,0.2) solid 2px;
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-bottom: 15px;
 }
 
 .announcement div {
