--- a/app/client/templates/form/insert.html
+++ b/app/client/templates/form/insert.html
@@ -1,3 +1,5 @@
 <template name="InsertForm">
+  {{pageTitle "Insert form"}}
+
   {{> quickForm collection="Forms" id="insertFormForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
 </template>
