--- a/app/client/templates/form/list.html
+++ b/app/client/templates/form/list.html
@@ -1,4 +1,5 @@
 <template name="FormsList">
+  {{pageTitle "Forms"}}
   {{#linkTo route="insertForm"}}<i class="fa fa-plus"></i> New Form{{/linkTo}}
   <table class="table table-hover">
     <thead>
