--- a/app/client/templates/form/submissions/submit.html
+++ b/app/client/templates/form/submissions/submit.html
@@ -1,8 +1,6 @@
 <template name="submitForm">
   <section class="content-header">
-    <h1 id="page_title" class="ui header page-header">
-      {{title}}
-    </h1>
+    {{pageTitle title}}
     {{> breadcrumb}}
   </section>
   {{#if destroyForm}}
