--- a/app/client/templates/menu/edit.html
+++ b/app/client/templates/menu/edit.html
@@ -1,4 +1,5 @@
 <template name="EditMenu">
+  {{pageTitle "Edit menu"}}
   {{> quickForm collection="Menus" doc=this.menu id="editMenuForm" type="update" omitFields="createdBy" buttonContent="Update"}}
   <hr>
   {{> quickRemoveButton collection="Menus" _id=this.menu._id beforeRemove=beforeRemove class="btn btn-danger"}}
