--- a/app/client/templates/menu/insert.html
+++ b/app/client/templates/menu/insert.html
@@ -1,3 +1,4 @@
 <template name="InsertMenu">
+  {{pageTitle "Insert menu"}}
   {{> quickForm collection="Menus" id="insertMenuForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
 </template>
