--- a/app/client/templates/menu/list.html
+++ b/app/client/templates/menu/list.html
@@ -1,4 +1,5 @@
 <template name="MenusList">
+  {{pageTitle "Menus"}}
   {{#linkTo route="insertMenu"}}<i class="fa fa-plus"></i> New Menu{{/linkTo}}
   <table class="table table-hover">
     <thead>
