--- a/app/client/templates/page/insert.html
+++ b/app/client/templates/page/insert.html
@@ -1,3 +1,4 @@
 <template name="InsertPage">
+  {{pageTitle "Insert Page"}}
   {{> quickForm collection="Pages" id="insertPageForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
 </template>
