--- a/app/client/templates/page/list.html
+++ b/app/client/templates/page/list.html
@@ -1,4 +1,5 @@
 <template name="PagesList">
+  {{pageTitle "Pages"}}
   {{#linkTo route="insertPage"}}<i class="fa fa-plus"></i> New Page{{/linkTo}}
   <table class="table table-hover">
     <thead>
