--- a/app/client/templates/role/edit.html
+++ b/app/client/templates/role/edit.html
@@ -1,4 +1,5 @@
 <template name="EditRole">
+  {{pageTitle "Edit role"}}
   {{> quickForm collection="Meteor.roles" doc=obj id="editRoleForm" type="update" omitFields="createdBy" buttonContent="Update"}}
   <hr>
   {{> quickRemoveButton collection="Meteor.roles" _id=obj._id beforeRemove=beforeRemove class="btn btn-danger"}}
