--- a/app/client/templates/role/list.html
+++ b/app/client/templates/role/list.html
@@ -1,4 +1,6 @@
 <template name="RolesList">
+  {{pageTitle "Roles"}}
+
   {{#linkTo route="insertRole"}}<i class="fa fa-plus"></i> New Role{{/linkTo}}
   <table class="table table-hover">
     <thead>
