--- a/app/client/templates/user/list.html
+++ b/app/client/templates/user/list.html
@@ -1,4 +1,6 @@
 <template name="UsersList">
+  {{pageTitle "Users"}}
+
   {{#linkTo route="insertMenu"}}<i class="fa fa-plus"></i> New Menu{{/linkTo}}
   <table class="table table-hover">
     <thead>
