--- a/app/client/templates/field/edit/edit.html
+++ b/app/client/templates/field/edit/edit.html
@@ -2,12 +2,10 @@
   <div class="fill">
     <div class="contain" style="overflow-y:auto;padding:10px">
       <section class="content-header">
-        <h1 id="page_title" class="ui header page-header">
-          Edit Field
-          {{#if (can "remove" field)}}
-          {{> quickRemoveButton collection="Fields" _id=field._id beforeRemove=beforeRemove class="btn btn-danger"}}
-          {{/if}}
-        </h1>
+        {{pageTitle "Edit Field"}}
+        {{#if (can "remove" field)}}
+        {{> quickRemoveButton collection="Fields" _id=field._id beforeRemove=beforeRemove class="btn btn-danger"}}
+        {{/if}}
         {{> breadcrumb}}
       </section>
       {{#if (can "update" field)}}
