--- a/app/client/templates/form/submissions/update.html
+++ b/app/client/templates/form/submissions/update.html
@@ -1,9 +1,7 @@
 <template name="updateForm">
   {{#if schema}}
-  <h1 id="page_title" class="ui header page-header">
-    {{form.title}}
-    {{> quickRemoveButton collection=collection _id=item._id onSuccess=onSuccess onError=onError class="btn btn-danger"}}
-  </h1>
+  {{pageTitle form.title}}
+  {{> quickRemoveButton collection=collection _id=item._id onSuccess=onSuccess onError=onError class="btn btn-danger"}}
   {{> quickForm collection=collection doc=item schema=schema id="updateForm" type="update" omitFields="createdBy" buttonContent="Submit"}}
   {{#each getFileTypes}}
     {{#with getFile}}
