--- a/app/client/templates/page/view.html
+++ b/app/client/templates/page/view.html
@@ -1,7 +1,5 @@
 <template name="ViewPage">
-  <h1 id="page_title" class="ui header page-header">
-    {{page.title}}
-  </h1>
+  {{pageTitle page.title}}
   {{#each widgets}}
     {{> Template.dynamic template=type data=this}}
   {{/each}}
