--- a/app/client/templates/user/edit.html
+++ b/app/client/templates/user/edit.html
@@ -1,3 +1,5 @@
 <template name="EditUser">
+  {{pageTitle "Edit user"}}
+
   {{> quickForm collection="Meteor.users" doc=this id="profileUpdateForm" type="update" omitFields="createdAt" buttonContent="Save Changes"}}
 </template>
