--- a/app/client/stylesheets/main.css
+++ b/app/client/stylesheets/main.css
@@ -34,26 +34,41 @@ body,html {
   display: inline-block;
   padding: 0px 0px 0px 0px;
   margin-bottom:20px;
-  -moz-box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.35);
-	-webkit-box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.35);
-	box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.35);
+  -moz-box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.2);
+	box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.2);
 	/* For IE 8 */
 	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=1, Direction=135, Color='#000000')";
 	/* For IE 5.5 - 7 */
 	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#000000');
+  border: rgba(0,0,1,0.4) solid 1px;
 
+}
+.main-header {
+-moz-box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
+-webkit-box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
+box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
+}
+.main-sidebar {
+-moz-box-shadow: 3px 2px 5px rgba(0, 0, 0, 0.3);
+-webkit-box-shadow: 3px 2px 5px rgba(0, 0, 0, 0.3);
+box-shadow: 3px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 .announcement h3 {
-  -moz-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);
-	-webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);
-	box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
+	-webkit-box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
+	box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
   margin: 0px;
   background: #ABC4D6;
   color:white;
   padding:10px;
   width: 100%;
-  border: rgba(0,0,1,0.2) solid 2px;
+  border: rgba(0,0,1,0.2) solid 1px;
+  border-top:0px;
+  border-left:0px;
+  border-right:0px;
+  background-color: #3c8dbc;
 }
 
 .page_title {
