--- a/app/client/templates/type/insert.html
+++ b/app/client/templates/type/insert.html
@@ -1,3 +1,4 @@
 <template name="InsertType">
+  {{pageTitle "Insert Type"}}
   {{> quickForm collection="Types" id="insertTypeForm" type="insert" omitFields="createdBy" buttonContent="Create"}}
 </template>
