--- a/app/client/templates/type/edit.html
+++ b/app/client/templates/type/edit.html
@@ -1,4 +1,5 @@
 <template name="EditType">
+  {{pageTitle "Edit Types"}}
   {{> quickForm collection="Types" doc=obj id="editTypeForm" type="update" omitFields="createdBy" buttonContent="Update"}}
   <hr>
   {{> quickRemoveButton collection="Types" _id=obj._id beforeRemove=beforeRemove class="btn btn-danger"}}
