--- a/app/client/templates/type/list.html
+++ b/app/client/templates/type/list.html
@@ -1,4 +1,5 @@
 <template name="TypesList">
+  {{pageTitle "Types"}}
   {{#linkTo route="insertType"}}<i class="fa fa-plus"></i> New Type{{/linkTo}}
   <table class="table table-hover">
     <thead>
