--- a/app/client/templates/time/list.html
+++ b/app/client/templates/time/list.html
@@ -1,5 +1,7 @@
 <template name="TimesList">
   {{#linkTo route="insertTime"}}<i class="fa fa-plus"></i> Punch{{/linkTo}}
+  <div class="box">
+    <div class="box-body table-responsive no-padding">
   <table class="table table-hover">
     <thead>
       <tr>
@@ -24,4 +26,6 @@
     {{/each}}
     </tbody>
   </table>
+</div>
+</div>
 </template>
