--- a/app/client/templates/user/list.html
+++ b/app/client/templates/user/list.html
@@ -2,6 +2,8 @@
   {{pageTitle "Users"}}
 
   {{#linkTo route="insertMenu"}}<i class="fa fa-plus"></i> New Menu{{/linkTo}}
+  <div class="box">
+    <div class="box-body table-responsive no-padding">
   <table class="table table-hover">
     <thead>
       <tr>
@@ -28,4 +30,6 @@
     {{/each}}
     </tbody>
   </table>
+</div>
+</div>
 </template>
