--- a/app/client/templates/widget/edit/edit.html
+++ b/app/client/templates/widget/edit/edit.html
@@ -16,6 +16,8 @@
       {{> quickForm collection="Widgets" doc=widget schema=schema id="editWidgetForm" type="update" omitFields="createdBy" buttonContent="Update"}}
       {{#if isForm widget}}
       {{#linkTo route="insertField" parent=widget._id}}<i class="fa fa-plus"></i> New Field{{/linkTo}}
+      <div class="box">
+        <div class="box-body table-responsive no-padding">
       <table id="items" class="table table-hover">
         <thead>
           <tr>
@@ -40,6 +42,8 @@
           {{/each}}
         </tbody>
       </table>
+    </div>
+  </div>
       {{/if}}
       {{/if}}
       {{/if}}
