--- a/app/client/templates/form/edit.html
+++ b/app/client/templates/form/edit.html
@@ -12,6 +12,8 @@
   <h4>Fields</h4>
   {{#linkTo route="insertField" parent=form._id}}<i class="fa fa-plus"></i> New field{{/linkTo}}
 
+  <div class="box">
+    <div class="box-body table-responsive no-padding">
   <table id="items" class="table table-hover">
     <thead>
       <tr>
@@ -34,4 +36,6 @@
     {{/each}}
     </tbody>
   </table>
+</div>
+</div>
 </template>
