--- a/app/client/templates/form/submissions/admin.html
+++ b/app/client/templates/form/submissions/admin.html
@@ -7,7 +7,9 @@
     {{> breadcrumb}}
 
   {{#linkTo route="submitForm" form=_id}}Submit new{{/linkTo}}
-  <table class="table table-hover">
+  <div class="box">
+    <div class="box-body table-responsive no-padding">
+<table class="table table-hover">
     <thead>
       <tr>
         <th>Created by</th>
@@ -35,4 +37,6 @@
     {{/each}}
     </tbody>
   </table>
+</div>
+</div>
 </template>
