--- a/app/client/templates/form/submissions/submissions.html
+++ b/app/client/templates/form/submissions/submissions.html
@@ -1,36 +1,40 @@
 <template name="submissions">
-    {{pageTitle title}}
-    {{#if (can "remove" field)}}
-    {{> quickRemoveButton collection="Fields" _id=field._id beforeRemove=beforeRemove class="btn btn-danger"}}
-    {{/if}}
-    {{> breadcrumb}}
-    {{#if canAdmin}}
-      {{#linkTo route="submissionsAdmin" form=currentForm}}Admin{{/linkTo}}
-    {{/if}}
+  {{pageTitle title}}
+  {{#if (can "remove" field)}}
+  {{> quickRemoveButton collection="Fields" _id=field._id beforeRemove=beforeRemove class="btn btn-danger"}}
+  {{/if}}
+  {{> breadcrumb}}
+  {{#if canAdmin}}
+  {{#linkTo route="submissionsAdmin" form=currentForm}}Admin{{/linkTo}}
+  {{/if}}
 
   {{#linkTo route="submitForm" form=_id}}Submit new{{/linkTo}}
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        {{#each getSchema}}
-          <th>{{label}}</th>
-        {{/each}}
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-    {{#each items}}
-      <tr>
-        {{#each getSchema}}
-          <td>{{{cell .. this}}}</td>
-        {{/each}}
-        <td>
-        {{#linkTo route="updateForm" form=../_id }}
-            <i class="fa fa-pencil-square-o"></i>
-        {{/linkTo}}
-        </td>
-      </tr>
-    {{/each}}
-    </tbody>
-  </table>
+  <div class="box">
+    <div class="box-body table-responsive no-padding">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            {{#each getSchema}}
+            <th>{{label .. this}}</th>
+            {{/each}}
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          {{#each items}}
+          <tr>
+            {{#each getSchema}}
+            <td>{{{cell .. this}}}</td>
+            {{/each}}
+            <td>
+              {{#linkTo route="updateForm" form=../_id }}
+              <i class="fa fa-pencil-square-o"></i>
+              {{/linkTo}}
+            </td>
+          </tr>
+          {{/each}}
+        </tbody>
+      </table>
+    </div>
+  </div>
 </template>
