--- a/app/client/templates/page/edit.html
+++ b/app/client/templates/page/edit.html
@@ -10,6 +10,8 @@
   <hr>
   <h4>Widgets</h4>
   {{#linkTo route="insertWidget" parent=page._id}}<i class="fa fa-plus"></i> New Widget{{/linkTo}}
+  <div class="box">
+    <div class="box-body table-responsive no-padding">
 
   <table class="table table-hover">
     <thead>
@@ -33,4 +35,6 @@
     {{/each}}
     </tbody>
   </table>
+</div>
+</div>
 </template>
