--- a/app/client/templates/role/list.html
+++ b/app/client/templates/role/list.html
@@ -2,6 +2,8 @@
   {{pageTitle "Roles"}}
 
   {{#linkTo route="insertRole"}}<i class="fa fa-plus"></i> New Role{{/linkTo}}
+  <div class="box">
+    <div class="box-body table-responsive no-padding">
   <table class="table table-hover">
     <thead>
       <tr>
@@ -22,4 +24,6 @@
     {{/each}}
     </tbody>
   </table>
+</div>
+</div>
 </template>
