--- a/app/client/templates/type/list.html
+++ b/app/client/templates/type/list.html
@@ -1,6 +1,8 @@
 <template name="TypesList">
   {{pageTitle "Types"}}
   {{#linkTo route="insertType"}}<i class="fa fa-plus"></i> New Type{{/linkTo}}
+  <div class="box">
+    <div class="box-body table-responsive no-padding">
   <table class="table table-hover">
     <thead>
       <tr>
@@ -23,4 +25,6 @@
     {{/each}}
     </tbody>
   </table>
+</div>
+</div>
 </template>
