--- a/app/client/templates/form/submissions/submit.html
+++ b/app/client/templates/form/submissions/submit.html
@@ -1,9 +1,13 @@
 <template name="submitForm">
     {{pageTitle title}}
     {{> breadcrumb}}
+    <div class="box">
+      <div class="box-body table-responsive no-padding">
   {{#if destroyForm}}
       {{! this is a wonky workaround for the fact that autoform doesn't handle reactively changing schema attribute, which should be fixed eventually}}
   {{else}}
       {{> quickForm collection=getCollection schema=getSchema id="submitForm" type="insert" omitFields="createdBy" buttonContent="Submit"}}
   {{/if}}
+    </div>
+  </div>
 </template>
